implemented sold out badge

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -5,6 +5,11 @@
       <h4><%= product.name %></h4>
     <% end %>
   </header>
+  <% if product.quantity == 0%>
+    <aside class="sold">
+      SOLD OUT
+    </aside>
+  <% end %>
   <p class="description">
     <%= product.description %>
   </p>
