--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -27,7 +27,7 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-       <li class="dropdown">
+          <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
             <span class="text-danger"><%= fa_icon 'lock', text: 'Admin' %></span>
@@ -37,14 +37,30 @@
             <li><%= link_to 'Dashboard', [:admin, :root] %></li>
             <li><%= link_to 'Products',  [:admin, :products] %></li>
             <li><%= link_to 'Categories', [:admin, :categories] %></li>
-          
           </ul>
         </li>
+        
         <li>
           <%= link_to cart_path do %>
-            <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
+          <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
           <% end %>
         </li>
+
+        <% if current_user %>
+         <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              Signed in as <%= current_user.first_name %>
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">     
+              <li><%= link_to "Logout", '/logout' %></li>
+          </ul>
+          </li>
+          <li>
+             <% else %>
+              <%= link_to 'Login', '/login' %>
+          </li>
+            <% end %>
       </ul>
     </div>
   </div>
