--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,35 @@
 <h1>Signup!</h1>
 
-<%= form_for :user, url: '/users' do |f| %>
+<div class="row">
+    <div class="col-sm-6 col-sm-offset-1">
+      <%= form_for :user, url: '/users' do |form| %>
 
-  First Name: <%= f.text_field :first_name %><br/>
-  Last Name: <%= f.text_field :last_name %><br/>
-  Email: <%= f.text_field :email %><br/>
-  Password: <%= f.password_field :password %><br/>
-  Password Confirmation: <%= f.password_field :password_confirmation %><br/>
-  <%= f.submit "Submit" %>
+        <div class="form-group">
+          <%= form.label :first_name %>
+          <%= form.text_field :first_name, class: 'form-control' %>
+        </div>
 
-<% end %>
+        <div class="form-group">
+          <%= form.label :last_name %>
+          <%= form.text_field :last_name, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= form.label :email %>
+          <%= form.text_field :email, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= form.label :password %>
+          <%= form.password_field :password, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= form.label :password_confirmation %>
+          <%= form.password_field :password_confirmation, class: 'form-control' %>
+        </div>
+
+        <%= form.submit 'Register', class: 'btn btn-primary' %>
+      <% end %>
+    </div>
+  </div>
