--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -56,9 +56,12 @@
               <li><%= link_to "Logout", '/logout' %></li>
           </ul>
           </li>
-          <li>
              <% else %>
+          <li>
               <%= link_to 'Login', '/login' %>
+          </li>
+                    <li>
+              <%= link_to 'Sign Up', '/signup' %>
           </li>
             <% end %>
       </ul>
