--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -5,7 +5,56 @@
   </header>
 
   <div class="order-summary jumbotron">
-    <h4>Thank you for your order!</h4>
+    <h4>Thank you for your order! 
+    <% if current_user %>
+      Order details were also sent to  <b><%= current_user.email %></b></h4>
+    <% end %>
+  </div>
+
+ <div class="panel panel-default items">
+    <table class="table table-bordered">
+      <thead> 
+        <tr>
+          <th colspan="2">Product</th>
+          <th>Unit Price</th>
+          <th>Quantity</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody>
+      <% @order.line_items.each do |item| %>
+      <tr>
+        <td>
+          <%= image_tag item.product.image.tiny %>
+        </td>
+        <td>
+          <h4><%= item.product.name %></h4>
+          <br>
+          <p><%= item.product.description %></p>
+        </td>
+        <td>
+          <%= item.product.price %>
+        </td>
+        <td>
+          <%= item.quantity %>
+        </td>
+        <td>
+          <%= item.product.price * item.quantity %>
+        </td>
+      </tr>
+      <% end %> 
+      </tbody>
+      <tfoot>
+        <tr>
+          <th colspan="4">
+            TOTAL:
+          </th>
+          <th>
+            <%=  @order.total_cents / 100.0 %>
+          </th>
+        </tr>
+      </tfoot>
+    </table>
   </div>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
