--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,6 +26,58 @@
       </div>
     </div>
 
+    <div class="row">
+      <% if current_user %>
+      <div class="row">
+        <div class="col-sm-6 col-sm-offset-1">
+          <%= form_for [@product, Review.new] do |form| %>
+
+            <% if form.object.errors.any? %>
+              <div class="alert alert-danger">
+                <strong>The following errors prevented saving:</strong>
+                <ul>
+                  <% form.object.errors.full_messages.each do |error| %>
+                    <li><%= error %></li>
+                  <% end %>
+                </ul>
+              </div>
+            <% end %>
+
+            <div class="form-group">
+              <%= form.label :rating %>
+              <%= form.select :rating, [*1..5], class: 'form-control' %>
+            </div>
+             <div class="form-group">
+              <%= form.label :description %>
+              <%= form.text_field :description, class: 'form-control' %>
+            </div>
+
+            <%= form.submit 'Create Category', class: 'btn btn-primary' %>
+          <% end %>
+        </div>
+      </div>
+    <% end %>
+
+
+    <% @product.reviews.order(created_at: :desc).each do |review| %>
+    <div class="col-sm-4">
+     <%= review.rating %>
+      </div>
+      <div class="col-sm-8">
+        <dl class="dl-horizontal">
+          <dt><%= review.user_id %></dt>
+          <dd><%= review.description %></dd>
+          <% if current_user.id == review.user_id %>
+            <dd><%= link_to fa_icon('trash'), [@product, review], class: 'btn btn-sm btn-danger', method: :delete, data: { confirm: "Are you sure?" } %><dd>
+          <% end %>
+
+        </dl>
+      </div>
+      <% end %>
+    </div>
+
+
   </article>
+
 
 </section>
