--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -13,6 +13,9 @@
   <p class="description">
     <%= product.description %>
   </p>
+  <aside class="rating">  
+    Average rating: <%= product.reviews.average(:rating).present? ? product.reviews.average(:rating).round(2) : 0 %>
+  </aside>
   <footer class="actions">
     <%= button_to add_item_cart_path(product_id: product.id), class: 'btn btn-primary' , method: :post do %>
       <%= fa_icon "shopping-cart", text: 'Add' %>
