--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,61 +22,60 @@
           <dd><%= @product.quantity %></dd>
           <dt>Price</dt>
           <dd><%= @product.price %></dd>
+          <dt>Average Rating</dt>
+          <dd><%= @product.reviews.average(:rating).present? ? @product.reviews.average(:rating).round(2) : 0 %></dd>
+          <br/>
+          <dd><b>Leave a Review<b></dd>
+          <hr>
+          <br/>
+
+          <% if current_user %>
+          <%= form_for [@product, Review.new] do |form| %>
+              <% if form.object.errors.any? %>
+                <div class="alert alert-danger">
+                  <strong>The following errors prevented saving:</strong>
+                  <ul>
+                    <% form.object.errors.full_messages.each do |error| %>
+                      <li><%= error %></li>
+                    <% end %>
+                  </ul>
+                </div>
+              <% end %>
+
+              <div class="form-group">
+               <dt> <%= form.label :rating %></dt>
+               <dd> <%= form.select :rating, [*1..5], class: 'form-control' %> </dd>
+              </div>
+              <div class="form-group">
+                <dt><%= form.label :description %> </dt>
+                <dd><%= form.text_area :description, class: 'form-control' %> </dd>
+              </div>
+
+              <dd><%= form.submit 'Add review', class: 'btn btn-primary' %></dd>
+            <% end %>
+          <% end %>
         </dl>
       </div>
     </div>
-
+  <hr>
     <div class="row">
-      <% if current_user %>
-      <div class="row">
-        <div class="col-sm-6 col-sm-offset-1">
-          <%= form_for [@product, Review.new] do |form| %>
-
-            <% if form.object.errors.any? %>
-              <div class="alert alert-danger">
-                <strong>The following errors prevented saving:</strong>
-                <ul>
-                  <% form.object.errors.full_messages.each do |error| %>
-                    <li><%= error %></li>
-                  <% end %>
-                </ul>
-              </div>
-            <% end %>
-
-            <div class="form-group">
-              <%= form.label :rating %>
-              <%= form.select :rating, [*1..5], class: 'form-control' %>
-            </div>
-             <div class="form-group">
-              <%= form.label :description %>
-              <%= form.text_field :description, class: 'form-control' %>
-            </div>
-
-            <%= form.submit 'Create Category', class: 'btn btn-primary' %>
-          <% end %>
-        </div>
-      </div>
-    <% end %>
-
-
     <% @product.reviews.order(created_at: :desc).each do |review| %>
     <div class="col-sm-4">
-     <%= review.rating %>
+     Rating: <%= review.rating %> / 5
       </div>
       <div class="col-sm-8">
         <dl class="dl-horizontal">
-          <dt><%= review.user_id %></dt>
-          <dd><%= review.description %></dd>
-          <% if current_user.id == review.user_id %>
-            <dd><%= link_to fa_icon('trash'), [@product, review], class: 'btn btn-sm btn-danger', method: :delete, data: { confirm: "Are you sure?" } %><dd>
-          <% end %>
+          <dt><%= review.user.first_name %>  <%= review.user.last_name%></dt>
+          <dd><%= review.description %>
 
+          <% if current_user && current_user.id == review.user_id %>
+            <%= link_to fa_icon('trash'), [@product, review], class: 'btn btn-sm btn-danger', method: :delete, data: { confirm: "Are you sure?" } %>
+          <% end %>
+          </dd>
         </dl>
       </div>
       <% end %>
     </div>
-
-
   </article>
 
 
